--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 
 h2 {
   font-size: 26px;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0 10px 10px 10px;
   text-align: center;
 }
 
 h3 {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 p {
@@ -22,7 +22,7 @@ p {
 }
 
 section {
-  padding: 20px;
+  padding: 24px;
 }
 
 section.alternate-background {
@@ -31,7 +31,16 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
+  padding-bottom: 24px;
+}
+
+#ideas img:last-child{
+  padding-bottom: 0;
+}
+
+#host img{
+  padding-bottom: 0;
 }
 
 /* ---  Groups & Items --- */
@@ -53,9 +62,12 @@ main img {
 /* -------  Navigation ------- */
 
 header {
+  display: flex;
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 8px 20px;
   text-align: center;
+  flex-direction: column;
+  font-size: 18px;
 }
 
 .logo {
@@ -79,14 +91,16 @@ header nav ul li a:hover {
   text-decoration: none;
 }
 
+#menu{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 /* -------  Search Form ------- */
 form {
   border: 2px solid #ff385c;
   padding: 10px;
-}
-
-form label {
-  font-weight: bold;
 }
 
 form select,
@@ -104,6 +118,19 @@ form button {
   width: 100%;
 }
 
+form div{
+  display: flex;
+  justify-content: space-between;
+}
+/* ------- about section -----*/
+#about{
+  padding-bottom: 28px;
+}
+
+#about h2{
+  padding-bottom: 12px;
+}
+
 /* -------  Footer ------- */
 
 footer {
@@ -117,3 +144,99 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 480px) {
+
+  header{
+    display: flex;
+    padding: 26px;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  header nav{
+    font-size: 18px;
+    align-items: center;
+  }
+
+  header nav ul{
+    margin: 10px;
+  }
+
+  .logo{
+    font-size: 28px; 
+  }
+
+  form{
+    max-width: 500px;
+    margin: auto;
+  }
+}
+
+@media all and (min-width: 1000px){
+  form{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    max-width: 100%;
+  }
+
+  .form-group{
+    display:flex;
+    flex-direction: column;
+    height: fit-content;
+    margin-left: 10px;
+  }
+
+  label {
+    display: flex;
+    flex-direction: row;
+  }
+
+   form button{
+     display: flex;
+     width: 180px;
+     height: 48px;
+     align-items: center;
+     justify-content: center;
+     margin: 10px;
+   } 
+
+  #about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   }
+
+   #about img{
+    width: 300px;
+    padding: 20px;
+   } 
+
+   #about div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+   }
+
+   #host{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+   #host div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+   }
+   
+   #host img{
+     width: 600px;
+   }
+}
+
+
+
